# yuxiangluan-assignment1

./: .gitignore  CITATION.cff  GETTING_STARTED.md  INSTRUCTIONS.md  README.md  assignment_analysis.py  pyproject.toml  report.md  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
amoc_analysis/: analysis.py  data.py  plotting.py  utilities.py
data/: moc_transports.nc
notebooks/: demo.ipynb  exercise1.ipynb
outputs/: assignment1_summary.json
spectra_filtering/: __init__.py  analysis.py  data_io.py  filters.py  leakage.py  spectra.py
tests/: test_analysis.py  test_assignment1_requirements.py  test_data.py  test_plotting.py
