[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
name = "yuxiangluan-assignment1"
version = "0.1.0"
description = "Assignment 1: characterising a NAC AMOC time series"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "xarray>=2023.12.0",
    "netcdf4>=1.6",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pytest>=8.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "amocatlas @ git+https://github.com/amoccommunity/amocatlas.git",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "nbconvert>=7.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spectra_filtering*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_assignment1_*.py"
addopts = "--verbose"
pythonpath = ["."]
